tests/errors/invalid-interface-input.expect
---CODE---
1
---STDERR---
error: Cannot prove constraint 1 >= 2
  ┌─ tests/errors/invalid-interface-input.fil:4:5
  │
4 │     @interface[L, L+1] go_L: 1,
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  │     │
  │     Invalid interface
  │     Interface allows event to trigger every 1 cycle(s)
5 │     @[G, G+1] in1: 32,
6 │     @[L, L+2] in2: 32,
  │     ----------------- Signal lasts for 2 cycle(s)

